[gd_scene load_steps=7 format=2]

[ext_resource path="res://Inventory.gd" type="Script" id=1]
[ext_resource path="res://ItemTable.gd" type="Script" id=2]
[ext_resource path="res://assets/invDRAFT.png" type="Texture" id=3]
[ext_resource path="res://InventoryGrid.gd" type="Script" id=4]
[ext_resource path="res://InventoryExitButton.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.45098 )

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="GridLayer" type="Node2D" parent="."]

[node name="GridBackground" type="ColorRect" parent="GridLayer"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.266667, 0.258824, 0.258824, 1 )

[node name="InventoryGrid" type="GridContainer" parent="GridLayer"]
margin_left = 540.0
margin_right = 540.0
columns = 12
script = ExtResource( 4 )

[node name="ItemTable" type="ItemList" parent="."]
margin_left = 200.0
margin_top = 160.0
margin_right = 1080.0
margin_bottom = 248.0
focus_mode = 0
custom_styles/bg = SubResource( 1 )
allow_reselect = true
max_columns = 20
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2( 64, 64 )
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -4

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 3 )

[node name="InventoryExitButton" type="Button" parent="."]
margin_left = 27.0
margin_top = 653.0
margin_right = 153.0
margin_bottom = 695.0
text = "Exit Inventory"
script = ExtResource( 5 )

[connection signal="item_selected" from="ItemTable" to="ItemTable" method="_on_ItemTable_item_selected"]
[connection signal="item_selected" from="ItemTable" to="ItemTable" method="_on_ItemList_item_selected"]
[connection signal="pressed" from="InventoryExitButton" to="InventoryExitButton" method="_on_InventoryExitButton_pressed"]
